fix(ProfileTopBar): fix problem with sticky position on mobile scroll

--- a/src/app/(profile)/(components)/MyProfile/ProfileTopBar/ProfileTopBar.module.scss
+++ b/src/app/(profile)/(components)/MyProfile/ProfileTopBar/ProfileTopBar.module.scss
@@ -1,5 +1,4 @@
 .titleBox {
-  position: sticky;
   top: 0;
   left: 0;
   display: flex;
